Minor change to prevent line wrapping.

--- a/app/assets/stylesheets/design/navigation.css.scss
+++ b/app/assets/stylesheets/design/navigation.css.scss
@@ -269,6 +269,8 @@ NAV DROPDOWN PREVIEWABLE SUBNAV
             padding: 0;
             padding-right: 15px;
 
+            &.item_name { padding-right: 0; }
+
             a { padding-right: 0; }
           }
 
